Bài 18: Phân trang, sắp xếp

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 8000
-URI_DB = "mongodb://127.0.0.1:27017/mydb"
+# URI_DB = "mongodb://127.0.0.1:27017/mydb"
+URI_DB = "mongodb+srv://hoangnmbg:fEBBZgdFRRbDCuVH@cluster0.lwutnp0.mongodb.net/shopee"
 SECRET_CODE = "hoangdepzai"
