--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.0.5"
+    "mongoose": "^7.0.5",
+    "mongoose-paginate-v2": "^1.7.31"
   }
 }
