--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 8000
 # URI_DB = "mongodb://127.0.0.1:27017/mydb"
-URI_DB = "mongodb+srv://hoangnmbg:fEBBZgdFRRbDCuVH@cluster0.lwutnp0.mongodb.net/shopee"
+URI_DB = "mongodb+srv://hoangnmndm:gloxOOiII9552J23@clusterone.xbpdz32.mongodb.net/nodejs-youtube"
 SECRET_CODE = "hoangdepzai"
